fix: nbsphinx dislikes output of templateflow.api.get
I've figured that my computer has the ``MNI152NLin2009cAsym`` present
but CircleCI doesn't.

Now my theory is that sphinx trips with the progress bar written out by
the templateflow downloader.

--- a/docs/notebooks/SDC - Theory and physics.ipynb
+++ b/docs/notebooks/SDC - Theory and physics.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.asanyarray(nb.load(get(\"MNI152NLin2009cAsym\", desc=\"brain\", resolution=1, suffix=\"T1w\")).dataobj)"
+    "data = np.asanyarray(nb.load(get(\"MNI152NLin2009cAsym\", desc=\"brain\", resolution=1, suffix=\"T1w\")).dataobj);"
    ]
   },
   {
